--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.username=myuser
 spring.datasource.password=mypassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=yourpassword
+spring.kafka.bootstrap-servers=localhost:9092
